--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@azure/openai-assistants": "^1.0.0-beta.5",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "multer": "^1.4.5-lts.1",
